--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "sweetalert2": "^11.10.7",
     "web-vitals": "^2.1.4"
   },
